<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cachirulop.logmytrip.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/rlActivateService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSaveTripDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tbSaveTrip"
            android:layout_alignParentLeft="true"
            android:text="@string/tvSaveTripDescText" />
        
        <ToggleButton
            android:id="@+id/tbSaveTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/tbSaveTripText" />
        
    </RelativeLayout>

        <TextView
        android:id="@+id/tvSavedTripsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSavedTripsDescText" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
